<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>async_frame</name>
  <version>0.9.0</version>
  <description>
    robomaster tool package for projectile motion,it's helpful to develop application like Auto-Aim,etc.
  </description>
  <maintainer email="fyt@csu.edu.cn">zhenpeng ge</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>opencv</depend>
  <depend>rcpputils</depend>
  <depend>cross_platform</depend>
  <depend>Boost</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
